# OmniTun

./: .env.example  .gitignore  .gitleaks.toml  .golangci.yml  CONTRIBUTING.md  Makefile  README.md  buf.gen.yaml  buf.yaml  config.example.yaml  go.mod  go.sum
.github/workflows/: ci.yml  deploy-staging.yml  release.yml
.kilo/: agent-manager.json
admin/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
admin/src/: App.tsx  index.css  main.tsx
cmd/admin/: main.go
cmd/client/: main.go
cmd/relay/: main.go
cmd/server/: main.go
deploy/: .env.prod  config.dev.yaml  config.prod.yaml
deploy/docker/: .trivyignore  Dockerfile.client  Dockerfile.relay  Dockerfile.server  daemon.json  docker-compose.mirror.yml  docker-compose.multi-relay.yml  docker-compose.override.yml  docker-compose.ports.yml  docker-compose.prod.yml  docker-compose.yml  infra.yml
deploy/geodns/: README.md
deploy/grafana/: README.md  (+1 more)
docs/: 00-overview.md  01-product-vision.md  02-market-analysis.md  03-competitive-analysis.md  04-product-requirements.md  05-technical-architecture.md  06-data-model.md  07-api-design.md  08-security-model.md  09-deployment.md  10-roadmap.md  11-adversarial-review.md  development.md
scripts/: build.sh  deploy.sh  dev-setup.sh  dev-teardown.sh  release.sh  security-check.sh  setup-mirrors.sh
sdk/python/: pyproject.toml
sdk/python/omnitun/: __init__.py  client.py  tunnels.py
web/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
(+299 files in other folders)
